add list#removeLast