@@ -54,7 +54,7 @@ public class DFSMazeSolver implements Solver {
                 return true;
             }
         }
-        path.remove(path.size() - 1);
+        path.removeLast();
         return false;
     }
 }
